--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
   "name": "mi-parada",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "license": "MIT",
   "scripts": {
-  "build": "tsc",
-  "start": "node dist/index.js",
-  "start:dev": "npm run build && nodemon dist/index.js",
-  "start:qa": "npm run build && nodemon dist/index.js",
-  "dev": "tsc --watch",
-  "test": "echo 'No tests specified'",
-  "lint": "echo 'No linting configured'"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/express": "^5.0.5",
-    "@types/node": "^24.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "dotenv": "^16.0.0",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "firebase-admin": "^13.5.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.0",
+    "pino": "^8.0.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
