--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
-    "pino": "^8.0.0"
+    "pino": "^8.0.0",
+    "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
